--- a/frontend/translations/de.yml
+++ b/frontend/translations/de.yml
@@ -324,6 +324,8 @@ de:
     delete_folder: Ordner löschen
     delete_encryptables: Zugangsdaten löschen
     configure: Konfiguriere Mitglieder
+    encryption_algorithm: "Die Daten im Nachfolgenden Feld werden mit dem Verschlüsselungslagorithmus "
+    key_size: " verschlüsselt. Die verwendete Schlüssellänge beträgt "
 
   helpers:
     label:
