--- a/frontend/translations/en.yml
+++ b/frontend/translations/en.yml
@@ -324,6 +324,8 @@ en:
     delete_folder: Delete the Folder
     delete_encryptables: Delete the Credentials
     configure: Configure Members
+    encryption_algorithm: "The data in the following field will be encrypted with the encryption algorithm "
+    key_size: " The key length used is "
 
   helpers:
     label:
