--- a/frontend/translations/fr.yml
+++ b/frontend/translations/fr.yml
@@ -99,6 +99,8 @@ fr:
       title: "partager fichier"
     receiver:
       name: Choisir le récepteur
+    submit: envoyer
+    description: Ton fichier sélectionné sera envoyé au destinataire sélectionné dans le dossier de la boîte de réception.
 
   admin:
     title: Admin
