--- a/frontend/translations/de.yml
+++ b/frontend/translations/de.yml
@@ -270,6 +270,7 @@ de:
       moved: Die Zugangsdaten wurden erfolgreich veschoben
       username_copied: Benutzername wurde kopiert
       password_copied: Passwort wurde kopiert
+      empty_copied: Leerer Wert kopiert
 
     encryptable-credentials:
       << : *encryptables_translations
