--- a/frontend/translations/fr.yml
+++ b/frontend/translations/fr.yml
@@ -270,6 +270,7 @@ fr:
       moved: Le team a été déplacé avec succès.
       username_copied: Le nom d'utilisateur a été copié
       password_copied: Le mot de passe a été copié
+      empty_copied: Valeur vide copiée
 
     encryptable-credentials:
       << : *encryptables_translations
