--- a/frontend/translations/fr.yml
+++ b/frontend/translations/fr.yml
@@ -94,13 +94,13 @@ fr:
     share:
       title: Partage fichier
 
-  encryptable/transfering/file:
+  encryptable/transferring/file:
     new:
       title: "partager fichier"
     receiver:
       name: Choisir le récepteur
     submit: envoyer
-    description: Ton fichier sélectionné sera envoyé au destinataire sélectionné dans le dossier de la boîte de réception.
+    description: Ton fichier sera envoyé crypté au destinataire sélectionné dans le dossier de la boîte de réception.
 
   admin:
     title: Admin
