Implement feedback and took changes from encryptable_transfer domain class

--- a/frontend/translations/de.yml
+++ b/frontend/translations/de.yml
@@ -44,7 +44,7 @@ de:
   share: Teilen
   close: Schliessen
   user: Benutzer
-  hi_user: "Moin, "
+  hi_user: "Hi, "
   intro: Du suchst ein Passwort?
   role: Rolle
   empty: leer
