--- a/frontend/translations/en.yml
+++ b/frontend/translations/en.yml
@@ -101,6 +101,7 @@ en:
       name: Choose a receiver
     submit: Send
     description: Your file will be sent encrypted to the inobx folder from the selected receiver.
+    download: Download transferred file
 
   admin:
     title: Admin
