--- a/frontend/translations/ch_be.yml
+++ b/frontend/translations/ch_be.yml
@@ -100,6 +100,7 @@ ch_be:
       name: Wäu ä empfänger
     submit: Schickä
     description: Dini Datei wird verschlüsslet i Inbox Ordner vom Empfänger gschickt.
+    download: Teilti datei abäladä
 
   admin:
     title: Admin
