--- a/frontend/translations/en.yml
+++ b/frontend/translations/en.yml
@@ -100,8 +100,10 @@ en:
     receiver:
       name: Choose a receiver
     submit: Send
-    description: Your file will be sent encrypted to the inobx folder from the selected receiver.
+    description_for_sender: Your file will be sent encrypted to the inobx folder from the selected receiver.
+    description_for_receiver: Description for the receiver
     download: Download transferred file
+    delete_transferred_encryptables: Delete transferred file
 
   admin:
     title: Admin
