--- a/frontend/translations/de.yml
+++ b/frontend/translations/de.yml
@@ -87,6 +87,8 @@ de:
       copy_password: Passwort kopieren
       copy_username: Benutzername kopieren
       add_attachment: Anhang hinzufügen
+      password_blank: Leeres Passwort
+      username_blank: Leerer Benutzername
     new:
       title: Neue Zugangsdaten
 
@@ -270,7 +272,7 @@ de:
       moved: Die Zugangsdaten wurden erfolgreich veschoben
       username_copied: Benutzername wurde kopiert
       password_copied: Passwort wurde kopiert
-      empty_copied: Leerer Wert kopiert
+      empty_copied: Leerer Wert nicht kopiert
 
     encryptable-credentials:
       << : *encryptables_translations
