Improve copy username/password, do not copy blank values, closes #637

--- a/frontend/translations/ch_be.yml
+++ b/frontend/translations/ch_be.yml
@@ -87,6 +87,7 @@ ch_be:
       copy_password: Passwort kopierä
       copy_username: Benutzername kopierä
       add_attachment: Anhang hinzufüegä
+      blank: Läär
     new:
       title: Nöi Zuägangsdate
 
