Implement validation for file upload in frontend

--- a/frontend/translations/ch_be.yml
+++ b/frontend/translations/ch_be.yml
@@ -305,6 +305,7 @@ ch_be:
       uploaded: D Datei isch erfougrich ufeglade worde.
       uploaded_size_to_high: D Datei isch z gross für z ufelade. (Maximau 10MB)
       uploaded_filename_is_empty: D Datei muess e Name ha
+      uploaded_file_blank: D datei daf nid läär si
       uploaded_file_inexistent: Die Datei existiert gar nid
       uploaded_filename_already_exists: D Dateiname existiert äuä scho
     encryptable_transfer:
