Start implementing feedback

--- a/frontend/translations/ch_be.yml
+++ b/frontend/translations/ch_be.yml
@@ -350,6 +350,7 @@ ch_be:
     delete_folder: Ordner lösche
     delete_encryptables: Zuägangsdate lösche
     configure: Konfigurier d'Mitgliedr
+    sent_by: Gsändet vo
 
   helpers:
     label:
