--- a/frontend/translations/fr.yml
+++ b/frontend/translations/fr.yml
@@ -351,6 +351,7 @@ fr:
     delete_folder: Supprimer le dossier
     delete_encryptables: Supprimer le compte
     configure: Configurer les membres
+    sent_by: Envoyé par
 
   helpers:
     label:
