--- a/frontend/translations/de.yml
+++ b/frontend/translations/de.yml
@@ -351,6 +351,7 @@ de:
     delete_folder: Ordner löschen
     delete_encryptables: Zugangsdaten löschen
     configure: Konfiguriere Mitglieder
+    sent_by: Gesendet von
 
   helpers:
     label:
