--- a/frontend/translations/fr.yml
+++ b/frontend/translations/fr.yml
@@ -19,6 +19,11 @@ fr:
   tag: Tag
   username: Nom d'utilisateur
   password: Mot de passe
+  pin: Pin
+  token: Jeton
+  email: E-mail
+  labelCustomAttr: Nom d'attribut personnalisé
+  valueCustomAttr: Valeur d'attribut personnalisé
   actions: Actions
   download: Télécharger
   download_file: Télécharger le fichier
@@ -87,8 +92,14 @@ fr:
       file: Fichier
       show_password: Afficher le mot de passe
       show_username: Afficher le nom d'utilisateur
+      show_pin: Afficher l'épingle
+      show_token: Afficher le jeton
+      show_email: Afficher l'e-mail
       copy_password: Copier le mot de passe
       copy_username: Copier le nom d'utilisateur
+      copy_pin: Copier la broche
+      copy_token: Copier le jeton
+      copy_email: Copier l'e-mail
       add_attachment: Ajouter un attachement
       blank: Vide
     new:
@@ -289,6 +300,9 @@ fr:
       moved: Le team a été déplacé avec succès.
       username_copied: Le nom d'utilisateur a été copié
       password_copied: Le mot de passe a été copié
+      pin_copied: La broche a été copiée
+      token_copied: Le jeton a été copié
+      email_copied: L'e-mail a été copié
 
     encryptable-credentials:
       << : *encryptables_translations
