--- a/frontend/translations/en.yml
+++ b/frontend/translations/en.yml
@@ -24,7 +24,6 @@ en:
   email: Email
   customAttr: Custom Attribute
   additionalField: Additional Field
-  additionalFieldPlaceholder: Choose additional field
   labelCustomAttr: Custom Attribute Name
   valueCustomAttr: Custom Attribute Value
   actions: Actions
@@ -99,16 +98,14 @@ en:
       show_pin: Show pin
       show_token: Show token
       show_email: Show email
-      show_custom_attr: Show custom attribute
       show: Show
       copy_password: Copy password
       copy_username: Copy username
       copy_pin: Copy pin
       copy_token: Copy token
       copy_email: Copy email
-      copy_custom_attr: Copy custom attribute
       copy: Copy
-      add_attachment: Add attachment
+      add_attachment: Add Attachment
       blank: none
     new:
       title: New Credentials
@@ -313,8 +310,7 @@ en:
       pin_copied: Pin was copied
       token_copied: Token was copied
       email_copied: Email was copied
-      customAttr_copied: Custom Attribute was copied
-      selectAdditionalField: You have to choose a field
+      custom-attr_copied: Custom Attribute was copied
 
     encryptable-credentials:
       << : *encryptables_translations
