--- a/frontend/translations/ch_be.yml
+++ b/frontend/translations/ch_be.yml
@@ -21,6 +21,8 @@ ch_be:
   pin: Pin
   token: Token
   email: Email
+  customAttr: Individuells Attribut
+  additionalField: Zuesätzlechs Fäud
   labelCustomAttr: Individuellä Attributname
   valueCustomAttr: Individuiuelli Attribut Mengi
   actions: Aktionä
@@ -94,11 +96,15 @@ ch_be:
       show_pin: Pin ahzeigä
       show_token: Token ahzeigä
       show_email: Email ahzeigä
+      show_custom_attr: Individuells Attribut ahzeigä
+      show: Ahzeigä
       copy_password: Passwort kopierä
       copy_username: Benutzername kopierä
       copy_pin: Pin kopierä
       copy_token: Token kopierä
       copy_email: Email kopierä
+      copy_custom_attr: Individuells Attribut kopierä
+      copy: kopierä
       add_attachment: Anhang hinzufüegä
       blank: Läär
     new:
@@ -302,6 +308,7 @@ ch_be:
       pin_copied: Dr Pin isch kopiert worde
       token_copied: Dr Token isch kopiert worde
       email_copied: D Email isch kopiert worde
+      customAttr_copied: Z individuellä Attribut isch kopiert worde
 
     encryptable-credentials:
       << : *encryptables_translations
