--- a/frontend/translations/fr.yml
+++ b/frontend/translations/fr.yml
@@ -19,7 +19,7 @@ fr:
   tag: Tag
   username: Nom d'utilisateur
   password: Mot de passe
-  pin: Pin
+  pin: Épingle
   token: Jeton
   email: E-mail
   customAttr: Attribut personnalisé
