write frontend tests for encryptable show and adjust some translations

--- a/frontend/translations/en.yml
+++ b/frontend/translations/en.yml
@@ -88,8 +88,8 @@ en:
     show:
       title: Credentials
       created_at: "Created at"
-      last_update: "Last Update at"
       transferred_at: "Transferred at"
+      last_update: "Last update at"
       attachments: Attachments
       file: File
       show_password: Show password
@@ -106,7 +106,7 @@ en:
       copy_email: Copy email
       copy_custom_attr: Copy custom attribute
       copy: Copy
-      add_attachment: Add Attachment
+      add_attachment: Add attachment
       blank: none
     new:
       title: New Credentials
