--- a/frontend/translations/fr.yml
+++ b/frontend/translations/fr.yml
@@ -50,7 +50,7 @@ fr:
   back: Retour
   save: Sauvegarder
   share: Partager
-  close: fermer
+  close: Fermer
   user: Utilisateur
   hi_user: "Salut, "
   intro: Vous cherchez un mot de passe?
