--- a/frontend/translations/en.yml
+++ b/frontend/translations/en.yml
@@ -108,6 +108,14 @@ en:
     description_for_receiver: Description for the receiver
     delete_transferred_encryptables: Delete transferred file
 
+  encryptable/transferring/credential:
+    new:
+      title: Send file to
+    receiver:
+      name: Choose a receiver
+    submit: Send
+    description_for_sender: Your credentials will be sent encrypted to the inbox folder from the selected receiver.
+
   admin:
     title: Admin
     settings:
