--- a/frontend/translations/en.yml
+++ b/frontend/translations/en.yml
@@ -57,6 +57,7 @@ en:
   role: Role
   empty: empty
   slogan: The place for passwords
+  error: An error occurred
 
   i18n:
     language:
@@ -390,6 +391,8 @@ en:
         description: Description
 
   validations:
+    attributes:
+      at_least_one_attribute: At least one attribute must be set
     name:
       present: Name must be present
       too_long: Name is too long
